Added Obtain Records Function

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 Purchase Order Management System.vcxproj
 Purchase Order Management System.vcxproj.filters
 Purchase Order Management System.vcxproj.user
+Debug/
