--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ Purchase Order Management System.vcxproj
 Purchase Order Management System.vcxproj.filters
 Purchase Order Management System.vcxproj.user
 Debug/
+Release/
+x64/
