--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
 Debug/
+Purchase Order Management System.vcxproj
+Purchase Order Management System.vcxproj.filters
+Purchase Order Management System.vcxproj.user
